overflow-x bug fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,10 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+  /* overflow-x: hidden;  */
+}
+
+body{
   overflow-x: hidden; /* para não aparecer barra de rolagem na horizontal */
 }
 
@@ -57,6 +61,11 @@ nav .nav-menu li a{
 
 nav .nav-menu li a:hover{
   color: var(--color-btn);
+}
+
+nav .hamburguer{
+  width: 40px;
+  display: none;
 }
 
 /* AQUI COMEÇA O MAIN DA PAGINA INDEX */
